Fixed alignment

--- a/.config/ags/scss/control-panel.scss
+++ b/.config/ags/scss/control-panel.scss
@@ -59,7 +59,7 @@ window#control-panel {
     border-radius: 8px;
 
     .icon {
-      margin-right: 4px;
+      margin-right: 0.4em;
     }
 
     scale {
